//  Copyright (c) 2018 Minoru Osuka
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 		http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package pb;

service Cluster {
    rpc PutNode (PutNodeRequest) returns (google.protobuf.Empty) {}
    rpc GetNode (GetNodeRequest) returns (GetNodeResponse) {}
    rpc DeleteNode (DeleteNodeRequest) returns (google.protobuf.Empty) {}
}

message PutNodeRequest {
    string cluster = 1;
    string node = 2;
}

message GetNodeRequest {
    string cluster = 1;
    string node = 2;
}

message GetNodeResponse {
    google.protobuf.Any value = 1;
}

message DeleteNodeRequest {
    string cluster = 1;
    string node = 2;
}
